--- a/todo.html
+++ b/todo.html
@@ -23,6 +23,28 @@
 
 
 
+<header>
+    <!-- navbar starts here -->
+    <nav class="navbar navbar-expand-lg bg-light">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#"> <img src="./images/todo.jpg" alt="" width="30" height="24" class="d-inline-block align-text-top">  To-Do List </a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto">
+              <li class="nav-item">
+                <a class="btn nav-link active" aria-current="page" href="./main.html">HOME</a>
+              </li>
+              </ul>
+              </div>
+            </div>
+            </nav>
+        </header>
+
+
+
+
     <div id="todo">
         <h1>List Daily Tasks</h1>
         <button onclick="ajax();">To-Do List</button>
