--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <div id="loginform">
 
       <centre>
-        <form action="./todo.html" class="login">
+        <form action="./main.html" class="login">
           <h2>User Login</h2>
       <br>
       <div class="login-cont">
