--- a/main.html
+++ b/main.html
@@ -43,7 +43,7 @@
 
 
               <li class="nav-item">
-                <a class="btn nav-link" href="#">To-Do List </a>
+                <a class="btn nav-link" href="./todo.html">To-Do List </a>
               </li>
 
           
